--- a/static/global-styles.css
+++ b/static/global-styles.css
@@ -2,7 +2,7 @@
   --accentColor: #3884ff;
   --backgroundColor: #fff;
   --headingColor: #000;
-  --textColor: #333;
+  --textColor: #222;
   --preFormattedTextColor: rgb(245, 247, 249);
   --linkColor: #3884ff;
   --decoColor: rgb(230, 236, 241);
@@ -32,7 +32,8 @@ body {
   scroll-behavior: smooth;
 }
 body {
-  font-family: Roboto, Arial, sans-serif;
+  font-family: Roboto, "-apple-system", BlinkMacSystemFont, "Segoe UI", Arial,
+    sans-serif;
   font-weight: 400;
   background-color: var(--backgroundColor);
   overflow-x: hidden;
@@ -70,8 +71,10 @@ a:hover {
 }
 
 .paragraph {
-  margin: 16px 0 32px;
-  line-height: 1.625;
+  margin: 1rem 0 2.5rem;
+  line-height: 1.56;
+  font-size: 16px;
+  overflow-wrap: break-word;
 }
 
 .headerTitle {
@@ -118,11 +121,6 @@ ol {
 }
 .socialWrapper li a {
   display: contents;
-}
-
-.addPaddTopBottom {
-  padding-top: 30px;
-  padding-bottom: 30px;
 }
 
 img {
