--- a/src/styles/global-styles.css
+++ b/src/styles/global-styles.css
@@ -1,5 +1,6 @@
 :root {
   --accentColor: #3884ff;
+  --accentHoverColor: #1656b3;
   --backgroundColor: #fff;
   --headingColor: #000;
   --textColor: #222;
