--- a/src/components/mdxComponents/code-block.scss
+++ b/src/components/mdxComponents/code-block.scss
@@ -1,4 +1,21 @@
 .gatsby-highlight {
   margin: 16px 0 32px;
   max-width: 100%;
+
+  & pre {
+    font-size: 18px;
+    line-height: 1;
+  }
+
+  @media (max-width: 767px) {
+    & pre {
+      font-size: 16px;
+    }
+  }
+
+  @media (max-width: 320px) {
+    max-width: calc(100% + 32px);
+    width: calc(100% + 32px);
+    margin-left: -16px;
+  }
 }
