feat: css colors

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -5,7 +5,7 @@
   --hoverColor: #f0f0f0;
   --backgroundColor: #fff;
   --headingColor: #000;
-  --textColor: #222;
+  --textColor: #212121;
   --preFormattedTextColor: rgb(245, 247, 249);
   --linkColor: #3884ff;
   --decoColor: rgb(230, 236, 241);
@@ -16,7 +16,7 @@
   --hoverColor: #434343;
   --backgroundColor: #2a2b2d;
   --headingColor: #fff;
-  --textColor: #fafafa;
+  --textColor: #dfdfdf;
   --preFormattedTextColor: #201f23;
   --linkColor: #3884ff;
   --decoColor: #777;
