--- a/src/styles/global-styles.css
+++ b/src/styles/global-styles.css
@@ -79,6 +79,12 @@ pre {
   font-size: var(--commonTextSize);
   border: 0 !important;
   background-color: rgb(245, 247, 249);
+
+  padding: 16px;
+  background: var(--preFormattedTextColor);
+  border-radius: 5px;
+  overflow: auto;
+  max-width: 100%;
 }
 
 blockquote {
@@ -163,6 +169,90 @@ img {
 .heading6 {
   font-size: 14px;
   font-weight: 400;
+}
+
+/* gatsby-remark-prismjs */
+.gatsby-highlight {
+  margin: 16px 0 32px;
+  max-width: 100%;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+@media (max-width: 320px) {
+  .gatsby-highlight {
+    max-width: calc(100% + 32px);
+    width: calc(100% + 32px);
+    margin-left: -16px;
+  }
+}
+
+.gatsby-highlight > pre {
+  padding: 12px 16px;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
+  background-color: #011627 !important;
+  font-size: 18px;
+  line-height: 1;
+}
+
+.gatsby-highlight > pre[class*="language-"] {
+  margin: 0;
+}
+
+.gatsby-highlight code {
+  font-size: 18px;
+}
+
+@media (min-width: 768px) {
+  .gatsby-highlight > pre {
+    scrollbar-width: auto;
+    scrollbar-color: var(--accentColor) transparent;
+  }
+  .gatsby-highlight > pre::-webkit-scrollbar {
+    height: 12px;
+    cursor: pointer;
+  }
+
+  .gatsby-highlight > pre::-webkit-scrollbar-thumb {
+    background-color: var(--accentColor);
+    border-radius: 6px;
+  }
+  .gatsby-highlight > pre::-webkit-scrollbar-thumb:hover {
+    background-color: var(--accentHoverColor);
+  }
+}
+
+@media (max-width: 1023px) {
+  .gatsby-highlight code {
+    font-size: 16px;
+  }
+}
+@media (max-width: 767px) {
+  .gatsby-highlight > pre {
+    font-size: 16px;
+  }
+}
+@media (max-width: 575px) {
+  .gatsby-highlight > pre {
+    padding: 8px 13px;
+  }
+
+  .gatsby-highlight code {
+    font-size: 14px;
+  }
+}
+
+p.paragraph > div {
+  display: inline;
+}
+
+html *:not(pre) > code[class*="language-"] {
+  padding: 0.1em 0.4em !important;
+  font-size: 1rem;
+  background-color: #011627;
+  color: #ccc;
 }
 
 .gatsby-resp-image-figure {
